# NyxID

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile.glama  LICENSE  README.md  WORKFLOW.md  docker-compose.node.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  glama.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.config/: nextest.toml
.cursor-plugin/: plugin.json
.fkst/: substrate-ref
backend/: Cargo.toml  Dockerfile  build.rs
backend/src/: api_docs.rs  cleanup_cli.rs  config.rs  db.rs  login_cli.rs  main.rs  mcp_demo.rs  redaction.rs  routes.rs  ssh_cli.rs  test_utils.rs
backend/src/crypto/: aes.rs  apple_client_secret.rs  device_code.rs  dpop.rs  hmac_keys.rs  jwks.rs  jwt.rs  key_provider.rs  local_key_provider.rs  mod.rs  mtls.rs  password.rs  telegram.rs  token.rs
backend/src/errors/: mod.rs
backend/src/handlers/: admin.rs  admin_anonymous_endpoints.rs  admin_groups.rs  admin_helpers.rs  admin_nodes.rs  admin_roles.rs  admin_sa_connections.rs  admin_sa_providers.rs  admin_service_accounts.rs  agent_bindings.rs  api_keys.rs  approvals.rs  auth.rs  auth_device.rs  billing.rs  broker_bindings.rs  catalog.rs  channel_bots.rs  channel_conversations.rs  channel_events.rs  channel_relay.rs  channel_webhooks.rs  chat.rs  cli_pairings.rs  connections.rs  consent.rs  credential_accept.rs  delegation.rs  demo.rs  developer_apps.rs  device_tokens.rs  devices.rs  docs.rs  endpoints.rs  health.rs  invite_codes.rs  keys.rs  llm_gateway.rs  llms_txt.rs  mcp.rs  (+35 more)
backend/src/models/: agent_service_binding.rs  anonymous_endpoint_usage.rs  api_key.rs  approval_grant.rs  approval_request.rs  audit_log.rs  auth_device_code.rs  authorization_code.rs  billing_rate_cache.rs  billing_topup_session.rs  billing_wallet.rs  channel_bot.rs  channel_conversation.rs  channel_event_log.rs  channel_message.rs  cli_pairing.rs  default_request_header.rs  device_code.rs  device_onboard_credential.rs  device_pubkey_lockout.rs  downstream_service.rs  invite_code.rs  mcp_session.rs  mod.rs  node.rs  node_pending_credential.rs  nullable_field.rs  oauth_broker_binding.rs  oauth_client.rs  oauth_state.rs  oracle_pool.rs  oracle_session.rs  oracle_task.rs  oracle_worker.rs  org_invite.rs  org_membership.rs  org_role_scope.rs  provider_config.rs  pushed_authorization_request.rs  reply_token_use.rs  (+15 more)
backend/src/mw/: auth.rs  csrf.rs  mod.rs  rate_limit.rs  security_headers.rs  telemetry.rs
backend/src/services/: action_description.rs  admin_user_service.rs  agent_binding_service.rs  anonymous_endpoint_service.rs  api_docs_service.rs  approval_policy.rs  approval_service.rs  audit_service.rs  auth_device_service.rs  auth_service.rs  cae_webhook_service.rs  catalog_service.rs  channel_bot_service.rs  channel_event_service.rs  channel_platform.rs  channel_relay_service.rs  channel_routing_service.rs  chatgpt_translator.rs  cli_pairing_service.rs  cloud_credential_verify.rs  cloud_response_cache.rs  connection_service.rs  consent_service.rs  content_type.rs  credential_push_service.rs  delegation_service.rs  device_code_service.rs  dpop_jti_cache.rs  event_dedup_cache.rs  gcp_sa_service.rs  group_service.rs  identity_service.rs  invite_code_service.rs  key_service.rs  lark_permission.rs  lark_token_service.rs  llm_gateway_service.rs  llm_usage_service.rs  mcp_service.rs  mfa_service.rs  (+51 more)
backend/src/services/billing/: lago_client.rs  meter.rs  mod.rs  owner_resolver.rs  provisioning.rs  reconcile.rs  reservation.rs  route_context.rs  webhook.rs
backend/src/services/channel_adapters/: discord.rs  lark.rs  mod.rs  openclaw.rs  slack.rs  telegram.rs
backend/src/services/device_code_service/: approve.rs  initiate.rs  lockout.rs  mod.rs  onboard.rs  poll.rs  rotation.rs
backend/src/telemetry/: context.rs  mod.rs  sampling.rs  schema.rs  scrub.rs
cli/: Cargo.toml  Dockerfile.node  build.rs  docker-entrypoint.sh
cli/src/: api.rs  auth.rs  browser.rs  cli.rs  error_format.rs  main.rs  org_resolver.rs  skill_self_heal.rs  test_support.rs  update_check.rs
cli/src/commands/: admin.rs  ai_setup.rs  api_key.rs  approval.rs  auth_flows.rs  billing.rs  catalog.rs  channel_bot.rs  channel_event.rs  developer_app.rs  device.rs  doctor.rs  endpoint.rs  external_key.rs  lark_permission.rs  mcp.rs  mfa.rs  mod.rs  node.rs  node_credential.rs  notification.rs  oauth.rs  openclaw.rs  oracle.rs  org.rs  pairing.rs  pool.rs  profile.rs  provider.rs  proxy.rs  public.rs  repo.rs  service.rs  service_account.rs  session.rs  ssh.rs  status.rs  telemetry.rs  update.rs  update_attestation.rs  (+1 more)
cli/src/node/: agent.rs  config.rs  credential_store.rs  daemon.rs  encryption.rs  error.rs  keychain.rs  metrics.rs  mod.rs  oauth.rs  proxy_executor.rs  secret_backend.rs  signing.rs  ssh_algos.rs  ssh_node_exec.rs  ws_client.rs  ws_frame_injector.rs
cli/src/node/credentials/: crypto.rs  mod.rs  pending_key_store.rs  remote_crypto.rs  ssh_keys.rs
cli/src/telemetry/: consent.rs  mod.rs
cli/src/wizard/: mod.rs  pairing.rs  server.rs
cli/src/wizard/assets/: index.html  wizard.css  wizard.html  wizard.js
cli/src/wizard/bundle-meta/: index.hash  index.manifest
cli/tests/: wizard_bundle_freshness.rs
cli/tests/fixtures/: update-attestation-statement.json
cloud-auth/: Cargo.toml
cloud-auth/src/: aws_sigv4.rs  error.rs  gcp_oauth.rs  lib.rs
designs/: codex-lark-multi-add-additive.md  multi-connection-custom-app-credentials.md  multi-connection-oauth.md
docs/: ADR-014-usage-billing-lago.md  AGENT_ISOLATION.md  AGENT_ISOLATION_HANDOFF.md  AI_AGENT_PLAYBOOK.md  AI_SERVICES_ARCHITECTURE.md  API.md  API_DISCOVERY.md  ARCHITECTURE.md  ENV.md  (+50 more)
mcp-demo/: Cargo.toml
mcp-demo/src/: main.rs
node-agent/: Cargo.toml
node-agent/src/: cli.rs  config.rs  credential_store.rs  keychain.rs  main.rs  oauth.rs  proxy_executor.rs  secret_backend.rs  signing.rs  ws_client.rs
nyxid-crypto/: Cargo.toml
nyxid-crypto/src/: codec.rs  context.rs  envelope.rs  error.rs  fingerprint.rs  lib.rs
(+776 files in other folders)
