[package]
name = "nyxid"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "request-id"] }
tokio = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = "9.3"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.22.1"
rsa = { version = "0.9.10", features = ["pem"] }
totp-rs = { version = "5.7", features = ["qr", "gen_secret"] }
validator = { version = "0.20", features = ["derive"] }
governor = "0.8.1"
reqwest = { version = "0.12.28", features = ["json", "stream", "rustls-tls", "http2"], default-features = false }
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }
bytes = "1.11"
anyhow = "1.0.101"
thiserror = "2.0.18"
dotenvy = "0.15.7"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
open = "5"
rpassword = "7"
subtle = "2"
url = "2.5"
urlencoding = "2.1"
zeroize = "1"
async-trait = "0.1"
regex = "1.12.3"
serde_bytes = "0.11"
tokio-stream = "0.1"
dashmap = "6"
hmac = "0.12"
async-stream = "0.3"
ssh-key = { version = "0.6.7", features = ["ed25519", "getrandom"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }

# Optional KMS provider dependencies (behind feature flags)
aws-config = { version = "1", optional = true }
aws-sdk-kms = { version = "1", optional = true }
google-cloud-kms = { version = "0.5", optional = true }
russh = "0.58.0"
tempfile = "3.27.0"
pty-process = { version = "0.5.3", features = ["async"] }
nix = { version = "0.31.2", features = ["term"] }
libc = "0.2.183"

[features]
default = []
aws-kms = ["aws-config", "aws-sdk-kms"]
gcp-kms = ["google-cloud-kms"]
