[package]
name = "nyxid-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[[bin]]
name = "nyxid"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
dirs = "6"
open = "5"
rpassword = "7"
urlencoding = "2.1"
rand = "0.8"
hex = "0.4"
comfy-table = "7"
url = "2"

# SSH subcommand + node agent WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

# Node agent dependencies
toml = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
directories = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
thiserror = "2"
pty-process = { version = "0.5.3", features = ["async"] }
nix = { version = "0.29", features = ["term"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
