[package]
name = "nyxid-cli"
version = "0.4.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nyxid"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

anyhow = "1"
clap = { version = "4.6", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
dirs = "6"
open = "5"
rpassword = "7"
urlencoding = "2.1"
rand = "0.8"
hex = "0.4"
comfy-table = "7"
url = "2"

# SSH subcommand + node agent WebSocket
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
russh = "0.58.0"

# Node agent dependencies
toml = "1.0"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Telemetry (first-run consent TTY detection)
is-terminal = "0.4"
directories = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
thiserror = "2"
pty-process = { version = "0.5.3", features = ["async"] }
libc = "0.2"
nix = { version = "0.31.2", features = ["term", "process", "signal"] }
tempfile = "3"

# Wizard v2 (CLI-served local browser UI). See docs/CLI_WIZARD_V2.md
axum = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["set-header", "cors"] }
rust-embed = { version = "8", features = ["include-exclude"] }
constant_time_eq = "=0.4.2"

[dev-dependencies]
tempfile = "3"
