[package]
name = "nyxid-node"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
urlencoding = "2.1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
directories = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
thiserror = "2"
rpassword = "7"
pty-process = { version = "0.5.3", features = ["async"] }
nix = { version = "0.29", features = ["term"] }
tempfile = "3"

[dev-dependencies]
