[package]
name = "nyxid-crypto"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "nyxid_crypto"
path = "src/lib.rs"

[features]
default = []
decrypt = []

[dependencies]
serde = { workspace = true }
base64 = "0.22.1"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
hkdf = "0.12.4"
sha2 = "0.10.9"
chacha20poly1305 = "0.10.1"

[dev-dependencies]
serde_json = { workspace = true }
